@@ -11,6 +11,8 @@ ChangeLog for hostapd
 	  wps_pbc are used to configuration WPS negotiation; see README-WPS for
 	  more details
 	* added IEEE 802.11n HT capability configuration (ht_capab)
+	* added support for generating Country IE based on nl80211 regulatory
+	  information (added if ieee80211d=1 in configuration)
 
 2008-11-23 - v0.6.6
 	* added a new configuration option, wpa_ptk_rekey, that can be used to
